a couple of spacing issues

--- a/src/sass/water_for_the_environment.scss
+++ b/src/sass/water_for_the_environment.scss
@@ -515,7 +515,7 @@ body.node-type-ew-pages {
   .our-progress {
     background: #fff;
     text-align: center;
-    margin-bottom: -6px;
+    margin-bottom: -32px;
 
     h2 {
       padding-top: 25px;
@@ -525,6 +525,10 @@ body.node-type-ew-pages {
   .environmental-strategies-wrapper {
     background: #fff;
     padding-bottom: 25px;
+
+    h2 {
+      margin: 0 0 26px !important;
+    }
   }
 
   .report-card-wrapper {
